# server

./: README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  settings.py
database/: __init__.py  ship.py  telemetry.py  user.py
endpoints/: __init__.py  dependencies.py  ship.py  telemetry.py  user.py
models/: __init__.py  ship.py  telemetry.py  user.py
